# cardboard

./: build.gradle  gradle.properties  settings.gradle
.github/workflows/: Debug.yml  android-build.yml  minbuild.yml
videoplayer-android/: CMakeLists.txt  README.md  build.gradle  proguard-rules.pro
videoplayer-android/src/main/: AndroidManifest.xml
videoplayer-android/src/main/java/com/google/cardboard/videoplayer/: SettingsActivity.java  VideoPlayerActivity.java  VrVideoActivity.java
videoplayer-android/src/main/jni/: video_player_app.cc  video_player_app.h  video_player_jni.cc
videoplayer-android/src/main/res/drawable/: control_background.xml  ic_launcher.xml  ic_video_player.xml  instruction_background.xml
videoplayer-android/src/main/res/layout/: activity_settings.xml  activity_video_player.xml  activity_vr_video.xml
videoplayer-android/src/main/res/values/: colors.xml  strings.xml  styles.xml
